# documentation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agents.md  instrumentation-client.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/[product]/: layout.tsx  page.tsx
app/components/: MarkdownRenderer.tsx  SidebarNav.tsx  ThemeProvider.tsx  ThemeToggle.tsx
app/lib/: remark-admonitions.ts
datafusion-llm-udf/: Cargo.toml
datafusion-llm-udf/src/: client.rs  lib.rs  main.rs  udaf.rs  udf.rs  udtf.rs  validation.rs
public/: theme-init.js
sanity/: client.ts  live.ts
scripts/: build-search-index.mjs
src/: middleware.test.ts  middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: ApiKeyBanner.tsx  ApiKeyIndicator.tsx  ApiKeyInjector.tsx  AuthButton.tsx  AuthProvider.tsx  ConfigProvider.tsx  ContentInjector.test.tsx  ContentInjector.tsx  CopyButton.tsx  CopyMarkdownButton.tsx  ExpandableSearch.tsx  MarkdownRenderer.tsx  MobileSidebar.tsx  ModelIdentifier.tsx  ModelSelector.tsx  PageEnhancer.tsx  ProductTabs.tsx  SearchHighlighter.tsx  SidebarNav.tsx  StatusWidget.tsx  TableOfContents.tsx  ThemeToggle.tsx
src/lib/: doc-content.ts  external-docs.test.ts  external-docs.ts  handlebars.ts  inference-api-sidebar.ts  model-artifacts.test.ts  model-artifacts.ts  models.test.ts  models.ts  portable-text.test.ts  portable-text.ts  product-nav.ts  reasoning-capabilities.test.ts  reasoning-capabilities.ts  scalar-api-reference.test.ts  search-index.ts  (+5 more)
(+29 files in other folders)
