[package]
name = "datafusion-llm-udf"
version = "0.1.0"
edition = "2021"
description = "DataFusion UDF for LLM extraction using OpenAI-compatible batch API"

[dependencies]
datafusion = "44"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "53"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
